--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# Backend Dependencies
+# Backend
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
@@ -9,10 +9,9 @@ pymysql==1.1.0
 alembic==1.12.1
 redis==5.0.1
 
-# Authentication
+# Auth
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
 
 # HTTP & Scraping
 httpx==0.25.2
@@ -41,14 +40,19 @@ python-dateutil==2.8.2
 # Monitoring & Logging
 structlog==23.2.0
 sentry-sdk[fastapi]==1.38.0
+prometheus-client==0.20.0    # ajouté pour /metrics
 
 # Testing
 pytest==7.4.3
 pytest-asyncio==0.21.1
-httpx==0.25.2
 
-# Development
+# Dev tools
 black==23.11.0
 isort==5.12.0
 flake8==6.1.0
 mypy==1.7.1
+
+# Perfs
+orjson==3.10.7           
+uvloop==0.19.0          
+fastapi-limiter==0.1.6  
